# curie-ai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  README.md  curie  directory_structure.md  download_gguf.py  ecosystem.config.js  install.sh  local server.session.sql  main.py  pyproject.toml  requirements-optional.txt  requirements.txt  test_features.py
agent/: chat_workflow.py  core.py  personality_adapter.py  personality_context.py  personality_speech.py  tools.py
assets/: example_persona.json
cli/: __init__.py  agent_cmd.py  agent_visual.py  agent_webview.py  auth.py  canvas.py  canvas_webview.py  channel.py  completions.py  cron.py  daemon.py  doctor.py  hardware.py  help_cmd.py  main.py  memory_cmd.py  metrics.py  onboard.py  service.py  tasks.py  tasks_display.py  ui.py
connectors/: api.py  discord_bot.py  kakaotalk.py  line.py  signal.py  slack.py  slack_bot.py  teams.py  telegram.py  whatsapp.py
docs/: ADVANCED_CODING_FEATURES.md  CODE_OF_CONDUCT.md  CODING_MODULES_GUIDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  ENV_SYNC.md  FEATURE_COMPARISON_MATRIX.md  FEATURE_ENHANCEMENTS_SUGGESTIONS.md  FEATURE_ROADMAP.md  FEATURE_SUGGESTIONS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MIGRATION_GUIDE.md  MULTI_PLATFORM_GUIDE.md  MULTI_PLATFORM_SUMMARY.md  NATURAL_CHAT_IMPROVEMENTS.md  OPTIMIZATION_COMPLETE.md  PM2_COMMANDS.md  PM2_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  REALTIME_FEATURES.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  directory_structure.json  (+1 more)
(+118 files in other folders)
