[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curie-ai"
version = "0.1.0"
description = "C.U.R.I.E. - Clever Understanding and Reasoning Intelligent Entity"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "yessur3808"}
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
